# audio-plugin-coder

./: .gitmodules
.agent/workflows/: new-block.md  ship.md
.github/workflows/: build-release.yml
plugins/ModularRandomizer/: .gitignore  CMakeLists.txt  README.md  status.json
plugins/ModularRandomizer/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md  refactoring-plan.md
plugins/ModularRandomizer/Design/: 04 Female Vocal A.vstpreset  ModularRandomizer_Audit_v2.md  lane-block.html  morph-pad-plan.md  v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-style-guide.md  v2-test.html  v2-ui-spec.md  v3-style-guide.md  v3-test.html  v3-ui-spec.md  v4-test.html  v4-ui-spec.md  v5-style-guide.md  v5-test.html  v5-ui-spec.md
plugins/ModularRandomizer/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginHosting.cpp  PluginProcessor.cpp  PluginProcessor.h  ProcessBlock.cpp
plugins/ModularRandomizer/Source/ui/public/: index.html  style.css
plugins/ModularRandomizer/Source/ui/public/css/: base.css  dialogs.css  header.css  logic_blocks.css  overrides.css  plugin_rack.css  themes.css  variables.css  wrongeq.css
plugins/ModularRandomizer/Source/ui/public/js/: context_menus.js  controls.js  expose_system.js  help_panel.js  juce_bridge.js  juce_integration.js  lane_module.js  logic_blocks.js  persistence.js  plugin_rack.js  preset_system.js  realtime.js  state.js  theme_system.js  undo_system.js  wrongeq_canvas.js
plugins/ModularRandomizer/installer/: LICENSE.txt  windows.iss
